--- a/css/components.css
+++ b/css/components.css
@@ -19,16 +19,19 @@
 .art-h1{
   margin-bottom: 32px;
   color: var(--gray_900);
+  font-family: var(--mont)
 }
 
 .art-h2{
   margin-top: 56px;
   margin-bottom: 24px;
+  font-family: var(--mont)
 }
 
 .art-h3{
   margin-top: 32px;
   margin-bottom: 12px;
+  font-family: var(--mont)
 }
 
 .p{
@@ -173,7 +176,7 @@
 /* ------------------------------header------------------------------ */
 
 header{
-  height: 68px;
+  height: auto;
   display: flex;
   flex-direction: row;
   align-content: center;
@@ -185,24 +188,26 @@ header div {
 nav {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 nav .nav-container{
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 1rem;
+
 }
-nav .nav-container > button {
-  margin-left: 1rem;
-}
-nav .nav-container > a {
+
+nav .nav-container li > a {
   padding: 0.25rem 0.5rem;
-  margin-left: 1rem;
   color: var(--pink_600);
   text-decoration: none;
   font-weight: 500;
   text-transform: capitalize;
-  
 }
 
 nav .nav-container > a:hover {
@@ -213,4 +218,68 @@ nav .nav-container > a:focus{
   outline-offset: 2px;
 }
 
+@media (max-width: 600px) {
+  nav {
+    justify-content: center;
+    padding-top: 1rem;
+    flex-direction: column;
+  }
+  nav .nav-container{
+    justify-content: center;
+    padding: 0;
+  }
+}
 /* ------------------------------end header------------------------------ */
+/* ------------------------------presentacion------------------------------ */
+
+.presentacion{
+  width: 100vw;
+}
+
+.presentacion div{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.presentacion div h2{
+  font-weight: 600;
+  width: 100%;
+}
+.presentacion div h2 span{
+  color: var(--pink_600);
+}
+.presentacion div p{
+  font-weight: 600;
+  width: 100%;
+  margin-top: 1rem;
+}
+/* ------------------------------ end presentacion------------------------------ */
+
+/* ------------------------------larticle__card------------------------------ */
+
+
+.larticle__body .larticle__card{
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  width: 100%;
+  /* height: 258px; */
+  /* border: 1px solid red; */
+  padding: 0.5rem;
+}
+.larticle__body .larticle__card time{
+  color: var(--gray_600);
+  text-transform: uppercase;
+}
+.larticle__body .larticle__card p{
+  color: var(--gray_900);
+}
+
+.larticle__body .larticle__card a{
+  color: var(--pink_700);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-decoration: none;
+}
