--- a/css/components.css
+++ b/css/components.css
@@ -218,7 +218,7 @@ nav .nav-container li > a:focus{
   outline-offset: 2px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   nav {
     justify-content: center;
     padding-top: 1rem;
@@ -262,6 +262,8 @@ nav .nav-container li > a:focus{
   display: flex;
   gap: 10px;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   width: 100%;
   /* height: 258px; */
   /* border: 1px solid red; */
@@ -282,6 +284,11 @@ nav .nav-container li > a:focus{
   font-weight: 500;
   text-transform: uppercase;
   text-decoration: none;
+  margin: 0;
+  transition: 0.5s;
+}
+.larticle__body .larticle__card a:hover{
+  color: var(--gray_700);
 }
 
 /* ------------------------------endlarticle__card------------------------------ */
@@ -297,6 +304,9 @@ nav .nav-container li > a:focus{
   margin: 3.2px;
   width: 26px;
   height: 26px;
+}
+.skills__cards img:hover{
+  filter: hue-rotate(280deg);
 }
 
 
@@ -315,6 +325,12 @@ nav .nav-container li > a:focus{
   height: 100%;
   object-fit: cover;
   border-radius: 0.5rem;
+  transition: 0.5s;
+}
+
+.hobbies__card img:hover{
+  transform: scale(1.05);
+  filter: drop-shadow(0px 0px 30px rgba(0, 0, 0, 0.2));
 }
 .minipading{
   padding: 8px;
