--- a/css/style.css
+++ b/css/style.css
@@ -58,12 +58,13 @@ main{
 
 .skills{
   padding: 48px 0;
+
 }
 .skills__body{
   /* width: auto; */
-  margin-top: 12px;
+  margin-top: 16px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 2rem;
 }
 
@@ -82,4 +83,67 @@ main{
   .hobbies__body{
     grid-template-columns: 1fr;
   }
+}
+/* ------------end about------------ */
+
+/* ------------portafolio------------ */
+.portafolio{
+  margin: 48px 0;
+}
+.portafolio__header{
+  margin-bottom: 16px;
+}
+.portafolio__body{
+  /* margin-top: 12px; */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+  gap: 2rem;
+}
+
+.portafolio__card{
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 30px -16px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+.portafolio__card:hover{
+  transform: scale(1.05);
+}
+
+.portafolio__body p {
+  margin: 0.5rem 0;
+}
+.portafolio__icons{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.left__icons{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.icon{
+  width: 40px;
+  height: 40px;
+  background-color: var(--gray_100);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+}
+
+.portafolio__etiquetas{
+  display: flex;
+  gap: 0.5rem;
+}
+.portafolio__etiqueta{
+  padding: 2px 10px;
+  background: var(--pink_100);
+  border-radius: 10px;
+  white-space: nowrap;
+  color: var(--gray_900);
 }
