add custom color

--- a/css/colors.css
+++ b/css/colors.css
@@ -13,16 +13,16 @@
 --gray_50: #F9FAFB;
 
 /* pink */
---pink_900: #831843;
---pink_800: #9D174D;
---pink_700: #BE185D;
---pink_600: #DB2777;
---pink_500: #EC4899;
---pink_400: #F472B6;
---pink_300: #F9A8D4;
---pink_200: #FBCFE8;
---pink_100: #FCE7F3;
---pink_50: #FDF2F8;
+--pink_900: #08306b;
+--pink_800: #083b83;
+--pink_700: #08519C;
+--pink_600: #2171b5;
+--pink_500: #4292c6;
+--pink_400: #6baed6;
+--pink_300: #9ecae1;
+--pink_200: #c6dbef;
+--pink_100: #deebf7;
+--pink_50: #f7fbff;
 
 /* stone */
 --stone_900: #1C1917;
