--- a/css/components.css
+++ b/css/components.css
@@ -341,11 +341,199 @@ nav .nav-container li > a:focus{
   text-align: center;
 }
 /* ------------------------------endhobbies__card------------------------------ */
+
+/* ------------------------------form inputs------------------------------ */
+.contact__input > label{
+  text-transform: uppercase;
+  color: var(--gray_900);
+  font-weight: 400;
+  margin-bottom: 4px;
+}
+
+.form-input{
+  /* margin-bottom: 32px; */
+  border-radius: 0.375rem;
+  border: 0.1rem solid var(--gray_700);
+  width: 100%;
+  height: 40px;
+  transition: background-image 1s ease, border 0.1s ease-in;
+  
+}
+.form-input:first-child{
+  padding: 0.5rem 0.75rem;
+}
+.form-input::placeholder{
+  font-size: 0.9rem;
+  /* font-weight: 300; */
+  line-height: 1.5rem;
+  color: var(--gray_300);
+}
+.form-input:focus{
+  border: 0px solid var(--pink_100);
+  box-shadow: 0px 0px 26px -5px var(--pink_200);
+  outline-offset: 0px;
+  outline: none;
+}
+.form-input:invalid{
+  border: 1px solid var(--red_500);
+  box-shadow: 0px 0px 5px 0px var(--red_500);
+  outline-offset: 0px;
+  outline: none;
+}
+.form-input[type=email]{
+  padding-left: 2.5rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  color: var(--gray_900);
+  background-position: 1rem center;
+  background-repeat: no-repeat;
+}
+
+.form-input[type=text]{
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  color: var(--gray_900);
+  background-position: 1rem center;
+  background-repeat: no-repeat;
+}
+.form-icon[type=text] {
+  background-image: url(/src/vector.svg);
+  padding-left: 2.5rem;
+}
+.form-icon[type=text]:focus {
+  background-image: url(/src/vectorhover.svg);
+}
+.form-iconcel[type=text] {
+  background-image: url(/src/cel.svg);
+  padding-left: 2.5rem;
+}
+.form-iconcel[type=text]:focus {
+  background-image: url(/src/celhover.svg);
+}
+.form-iconemp[type=text] {
+  background-image: url(/src/empresa.svg);
+  padding-left: 2.5rem;
+}
+.form-iconemp[type=text]:focus {
+  background-image: url(/src/empresahover.svg);
+}
+.form-icon[type=email] {
+  background-image: url(/src/email.svg);
+  padding-left: 2.5rem;
+}
+.form-icon[type=email]:focus {
+  background-image: url(/src/emailhover.svg);
+}
+.contact__input select {
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.375rem;
+  border: 0.1rem solid var(--gray_700);
+  width: 100%;
+  height: 40px;
+  transition: background-image 1s ease, border 0.1s ease-in;
+}
+.contact__input select:focus-within{
+  border: 0px solid var(--pink_100);
+  box-shadow: 0px 0px 26px -5px var(--pink_200);
+  outline-offset: 0px;
+  outline: none;
+}
+.contact__input select:invalid{
+  border: 1px solid var(--red_500);
+  box-shadow: 0px 0px 5px 0px var(--red_500);
+  outline-offset: 0px;
+  outline: none;
+}
+.contact__input select{
+  background-image: url(/src/arr.svg);
+  background-position: 96% 50% ;
+  background-repeat: no-repeat;
+  background-size: 10px;
+  appearance: none;
+}
+.check{
+  margin: 0.5rem 0;
+}
+.check h4{
+  padding-left: 26px;
+  color: var(--gray_400);
+  font-weight: 400;
+  white-space: nowrap;
+} 
+/* .check__box input[type="checkbox"]{
+  appearance: none;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid currentColor;
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+} */
+/* .checkmark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 16px;
+  width: 16px;
+  border-radius: 4px;
+  border: 1px solid var(--stone_700);
+}
+.check__box:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+.check__box input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+.check__box{
+display: block;
+  position: relative;
+  padding-left: 26px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.check__box input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.check__box input:checked ~ .checkmark:after {
+  display: block;
+}
+.check__box .checkmark:after {
+  left: 4px;
+  top: 1px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+} */
+
+/* ------------------------------end form inputs------------------------------ */
+
 /* ------------------------------footer------------------------------ */
 
 footer {
   padding: 48px 0;
-  background: var(--stone_600);
+  background: var(--gray_600);
 }
 .footer{
   display: flex;
