--- a/css/style.css
+++ b/css/style.css
@@ -147,3 +147,26 @@ main{
   white-space: nowrap;
   color: var(--gray_900);
 }
+/* ------------end portafolio------------ */
+
+/* ------------contact------------ */
+.contact {
+  padding: 48px 0 ;
+}
+.contact__all{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.contact__header p{
+  margin-top: 4px;
+  text-align: center;
+}
+
+.contact__body{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
+  gap: 2rem;
+  margin: 2rem 0;
+}
